Fixes description text overflowing in small viewports
Fixes description text overflowing in small viewports

--- a/front/src/styles/ItemDetails.scss
+++ b/front/src/styles/ItemDetails.scss
@@ -83,11 +83,7 @@
 		&-desc {
 			color: #999999;
 			grid-area: desc;
-			max-width: 100%;
-
-			@media (min-width: 1024px) {
-				max-width: 680px;
-			}
+			overflow: hidden;
 
 			h3 {
 				color: #333333;
